--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node cors.js"
   },
   "dependencies": {
-    "cors-anywhere": "^0.4.3"
+    "cors-anywhere": "^0.4.3",
+    "express": "^4.17.1"
   },
   "license": "MIT"
 }
