--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "cors-anywhere": "^0.4.3",
+    "http-proxy-middleware": "^1.0.4",
     "express": "^4.17.1"
   },
   "license": "MIT"
